--- a/faceAppApiServer/package.json
+++ b/faceAppApiServer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "Start": "nodemon server.js"
+    "Start": "node server.js"
   },
   "keywords": [],
   "author": "",
